[build-system]
    requires = ["meson-python", "cython", "numpy"]
    build-backend = "mesonpy"

[project]
name = "pyPDAF"
authors = [
    {name = "Yumeng Chen", email = "yumeng.chen@reading.ac.uk"},
]
version = "1.1"
description = "A Python interface to Parallel Data Assimilation Framework (PDAF)"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["data assimilation", "PDAF"]
license = {text = "GPL License"}
dependencies = [
    "numpy", "mpi4py"
]

[project.scripts]
pypdaf-version = "pyPDAF._cli:print_version_main"
pypdaf-filter-types = "pyPDAF._cli:print_filter_types_main"
pypdaf-filter-options = "pyPDAF._cli:options_filters_main"
