[options]
include_package_data = True
install_requires =
    Cython
    mpi4py
    numpy

[PDAF]
# PDAF source file directory
directory= PDAF_V2.1
# fortran compiler
FC = mpif90
# fortran linker
LD = mpif90
AR = ar
RANLIB = ranlib
CPP = cpp
OPT = -O3 -fdefault-real-8 -fPIC
OPT_LNK =
INC = -IPDAF_V2.1/include
LINK_LIBS = -llapack -lblas 
CPP_DEFS = -DUSE_PDAF

[pyPDAF]
pwd = /home/runner/work/pyPDAF/pyPDAF/
CC = mpicc
LAPACK_PATH=
LAPACK_Flag=lapack,blas
