[options]
include_package_data = True
install_requires =
    Cython
    mpi4py
    numpy

[PDAF]
# PDAF source file directory
directory= PDAF_V2.1
# fortran compiler
FC = mpif90
# fortran linker
LD = mpif90
AR = ar
RANLIB = ranlib
CPP = cpp
OPT = -O3 -fdefault-real-8 -fPIC
OPT_LNK =
INC = -IPDAF_V2.1/include
LINK_LIBS = -llapack -lblas 
CPP_DEFS = -DUSE_PDAF

[pyPDAF]
pwd = /home/runner/work/pyPDAF/pyPDAF/
CC = mpicc
condaBuild =
# if MKL is used, give the path to the static MKL library
use_MKL=
MKLROOT=
# if dynamic/shared liblapack and libblas library is used,
# give the library path and flags
LAPACK_PATH=
LAPACK_Flag=lapack,blas
# GIVE MPI information
MPI_INC_PATH=
MPI_MOD_PATH=
MPI_LIB_PATH=
