[metadata]
name = pyPDAF
version = 0.0.2
description = A Python interface to Fortran-written PDAF data assimilation library
long_description = file: README.md, LICENSE
keywords = data assimilation, PDAF
license = GPL V3
classifiers =
    License :: GPL V3
    Programming Language :: Python :: 3

[options]
include_package_data = True
install_requires =
    Cython
    mpi4py
    numpy

[pyPDAF]
pwd = /home/runner/work/pyPDAF/pyPDAF
PDAF_dir = PDAF_V2.2.1
cmake_config_path = /home/runner/work/pyPDAF/pyPDAF/PDAFBuild/linux_gfortran_openmpi_pypdaf.cmake
CC = mpicc
condaBuild = False
# if MKL is used, give the path to the static MKL library
use_MKL= False
MKLROOT=
# if dynamic/shared liblapack and libblas library is used,
# give the library path and flags
LAPACK_PATH=
LAPACK_Flag=lapack,blas
# GIVE MPI information
MPI_LIB_PATH=
